pp-postmark-relay/postmark-relay-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postmark-relay
  namespace: pp-postmark-relay
  labels:
    app: postmark-relay
spec:
  replicas: 2
  selector:
    matchLabels:
      app: postmark-relay
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: postmark-relay
    spec:
      containers:
        - name: postmark-relay
          image: pproj/postmark-relay:12
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 60
            httpGet:
              path: /healthz
              port: 8000
          resources:
            requests:
              cpu: 50m
              memory: 150m
          volumeMounts:
            - mountPath: "/mapping"
              readOnly: true
              name: "address-mapping"
      volumes:
        - name: "address-mapping"
          secret:
            secretName: "postmark-relay-mapping"
