pp-postmark-relay/postmark-relay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postmark-relay-svc
  namespace: pp-postmark-relay
  labels:
    app: postmark-relay
spec:
  type: ClusterIP
  ports:
    - name: postmark-relay
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: postmark-relay
