pp-postmark-relay/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postmark-relay-redis-svc
  namespace: pp-postmark-relay
  labels:
    app: postmark-relay-redis
spec:
  selector:
    app: postmark-relay-redis
  ports:
    - name: postmark-relay-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
