pp-postmark-relay/postmark-relay-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postmark-relay-ingress
  namespace: pp-postmark-relay
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    cert-manager.io/revision-history-limit: "2"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - postmark-relay.pp.k8s.marcsello.com
      secretName: letsencrypt
  rules:
    - host: postmark-relay.pp.k8s.marcsello.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postmark-relay-svc
                port:
                  number: 80
